// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParseApi return a 401 specific example: parseAuthExample 1`] = `
{
  "content": "HTTP/1.1 401 Unauthorized
{
  "detail": "Authentication credentials were not provided."
}",
  "status": 401,
  "title": "Error-Response:",
  "type": "json",
}
`;

exports[`ParseApi should force a response, or a general example: exampleResponse.fallback 1`] = `
{
  "content": "Success",
  "status": 200,
  "type": "text",
}
`;

exports[`ParseApi should force a response, or a general example: exampleResponse.forcedStatus.200 1`] = `
{
  "status": 200,
}
`;

exports[`ParseApi should force a response, or a general example: exampleResponse.forcedStatus.400 1`] = `
{
  "status": 400,
}
`;

exports[`ParseApi should parse type and status examples: parseStatus.success.delete 1`] = `
[
  {
    "content": "HTTP/1.1 200 OK
{
  "foo": "hello",
  "bar": "world"
}",
    "status": 200,
    "title": "Success-Response:",
    "type": "json",
  },
]
`;

exports[`ParseApi should parse type and status examples: parseStatus.success.get 1`] = `
[
  {
    "content": "HTTP/1.1 200 OK
{
  "foo": "hello",
  "bar": "world"
}",
    "status": 200,
    "title": "Success-Response:",
    "type": "json",
  },
]
`;

exports[`ParseApi should return specific properties: specific properties 1`] = `
[
  "exampleApiDocResponse",
  "exampleResponse",
  "parseAuthExample",
  "parseStatus",
]
`;
